docs: 文档更新，文档站点样式调整

--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -256,5 +256,6 @@ blockquote {
   box-sizing: border-box;
   margin-top: var(--d-gap-sm);
   padding: var(--d-gap-sm);
+  border-radius: var(--d-radius-md);
   background: #f2f4f5 !important;
 }
