refactor: 修改项目名

--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -164,7 +164,8 @@ blockquote {
         margin-top: var(--d-gap-sm);
       }
 
-      ul, ol {
+      ul,
+      ol {
         margin-top: var(--d-gap-xs) !important;
       }
     }
