--- a/packages/src/picker/style.scss
+++ b/packages/src/picker/style.scss
@@ -55,7 +55,13 @@
     }
 
     &__content {
-      transition: transform 0.3s;
+      height: 100%;
+      overflow-y: auto;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+      //transition: transform 0.3s;
     }
 
     &__overlay {
