fix: 修复打包报错问题

--- a/packages/src/style/index.scss
+++ b/packages/src/style/index.scss
@@ -20,4 +20,4 @@
 @import '../upload/style';
 @import '../form/style';
 @import '../textarea/style';
-@import "../scroll-radio/style";
+@import '../scroll-radio/style';
