--- a/packages/src/switch/style.scss
+++ b/packages/src/switch/style.scss
@@ -23,17 +23,6 @@
     cursor: wait;
   }
 
-  &__handle {
-    width: 16px;
-    height: 16px;
-    line-height: 18px;
-    transform: translate(3px, -50%);
-
-    &--active {
-      transform: translate(calc(100% + 3px), -50%);
-    }
-  }
-
   &--small {
     width: 30px;
     height: 16px;
@@ -44,7 +33,7 @@
         height: 12px;
 
         &--active {
-          transform: translate(calc(100% + 3px), -50%);
+          left: calc(100% - 18px);
         }
       }
     }
@@ -60,7 +49,7 @@
         height: 16px;
 
         &--active {
-          transform: translate(calc(100% + 5px), -50%);
+          left: calc(100% - 22px);
         }
       }
     }
@@ -76,7 +65,7 @@
         height: 20px;
 
         &--active {
-          transform: translate(calc(100% + 7px), -50%);
+          left: calc(100% - 26px);
         }
       }
     }
@@ -116,7 +105,7 @@
     overflow: hidden;
     font-size: var(--d-font-size-xs);
     line-height: 1;
-    transition: transform 0.4s;
+    transition: left 0.4s;
     transform: translate(3px, -50%);
   }
 }
