refactor(Tabs): 优化 Tabs 组件选择过多的情况下，已选 Tab 位置问题

--- a/packages/src/tabs/style.scss
+++ b/packages/src/tabs/style.scss
@@ -6,7 +6,7 @@
   &__nav {
     position: relative;
     display: flex;
-    overflow-x: auto;
+    overflow: auto hidden;
     background: var(--d-white-color);
 
     &::-webkit-scrollbar {
@@ -16,6 +16,7 @@
     &-item {
       height: var(--d-tabs-line-height);
       line-height: var(--d-tabs-line-height);
+      white-space: nowrap;
       cursor: pointer;
 
       &:not(:first-of-type) {
