refactor: 主题色变更

--- a/packages/src/style/var.scss
+++ b/packages/src/style/var.scss
@@ -1,6 +1,6 @@
 :root {
   // 主题色
-  --d-primary: #057cef;
+  --d-primary: #1b62eb;
 
   // 提示类颜色
   --d-success: #00a870;
@@ -10,14 +10,20 @@
   --d-white-color: #fff;
 
   // 灰色
-  --d-gray-1: #f7f8fa;
-  --d-gray-2: #f2f3f5;
-  --d-gray-3: #ebedf0;
-  --d-gray-4: #dcdee0;
-  --d-gray-5: #c8c9cc;
-  --d-gray-6: #969799;
-  --d-gray-7: #646566;
-  --d-gray-8: #323233;
+  --d-gray-1: #f3f3f3;
+  --d-gray-2: #eeeeee;
+  --d-gray-3: #e8e8e8;
+  --d-gray-4: #dddddd;
+  --d-gray-5: #c6c6c6;
+  --d-gray-6: #a6a6a6;
+  --d-gray-7: #8b8b8b;
+  --d-gray-8: #777777;
+  --d-gray-9: #5e5e5e;
+  --d-gray-10: #4b4b4b;
+  --d-gray-11: #393939;
+  --d-gray-12: #2c2c2c;
+  --d-gray-13: #242424;
+  --d-gray-14: #181818;
 
   // 边框颜色
   --d-border-color: #e5e5e5;
