--- a/docs/src/components/menu/style.scss
+++ b/docs/src/components/menu/style.scss
@@ -3,15 +3,17 @@
 
   &__wrapper:not(&__sub-menu) {
     > #{$prefix}__item {
-      margin-top: var(--d-gap-sm);
       padding-bottom: var(--d-gap-xs);
       border-bottom: var(--d-border);
+
+      &:not(:first-of-type) {
+        margin-top: var(--d-gap-sm);
+      }
     }
   }
 
   &__item {
     $itemPrefix: &;
-    line-height: 1.5;
     list-style: none;
 
     &--active {
@@ -24,13 +26,19 @@
 
     &--group-title {
       margin-bottom: var(--d-gap-xs);
+      font-size: var(--d-font-size-xs) !important;
       color: var(--d-secondary-text-color);
     }
 
     &-link {
-      line-height: var(--d-line-height-lg);
+      height: 32px;
       font-size: var(--d-font-size-sm);
+      line-height: 32px;
       cursor: pointer;
+
+      &:hover * {
+        color: var(--d-primary);
+      }
 
       &--title {
         margin-right: var(--d-gap-xs);
