fix(Calendar): 修复日历组件月份切换列表未更新问题

--- a/packages/src/calendar/style.scss
+++ b/packages/src/calendar/style.scss
@@ -42,7 +42,7 @@
       right: var(--d-popup-padding);
     }
 
-    &-date-picker__trigger {
+    &-date-time-picker__trigger {
       display: inline-block;
     }
   }
