refactor: 所有组件只读颜色调整

--- a/packages/src/input/style.scss
+++ b/packages/src/input/style.scss
@@ -6,17 +6,9 @@
   border: 0;
   caret-color: var(--d-primary);
   @include text-align;
+  @include disabled;
 
   &:-webkit-autofill {
     background: none;
-  }
-
-  &--disabled,
-  &--readonly {
-    color: var(--d-disable-color);
-
-    &::placeholder {
-      color: var(--d-disable-color);
-    }
   }
 }
