--- a/packages/src/switch/style.scss
+++ b/packages/src/switch/style.scss
@@ -22,6 +22,7 @@
   vertical-align: middle;
   transition: background-color 0.3s;
   cursor: pointer;
+  @include disabled;
 
   &--active {
     background-color: var(--d-primary);
