docs: 文档 PC demo 示例增加双列布局

--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -130,6 +130,19 @@ blockquote {
     }
   }
 
+  &__multi-columns {
+    display: flex;
+    justify-content: space-between;
+
+    &--item {
+      width: calc(50% - 8px);
+    }
+
+    .dl-doc-preview__wrapper {
+      margin-bottom: 16px;
+    }
+  }
+
   &__out-content {
     flex: 1;
     display: flex;
