--- a/docs/src/components/preview/style.scss
+++ b/docs/src/components/preview/style.scss
@@ -70,6 +70,8 @@
 
     .dl-doc-preview__runtime {
       padding-bottom: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
 
     #{&} {
@@ -106,7 +108,7 @@
         }
 
         .shiki {
-          padding-top: 0;
+          padding-top: 10px;
         }
       }
     }
