--- a/packages/dl-common/src/style/var.scss
+++ b/packages/dl-common/src/style/var.scss
@@ -31,12 +31,18 @@
   --d-border: 1px solid var(--d-border-color);
 
   // 阴影
-  --d-box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  --d-shadow-1: 0 1px 10px rgba(0, 0, 0, 5%), 0 4px 5px rgba(0, 0, 0, 8%),
+    0 2px 4px -1px rgba(0, 0, 0, 12%);
+  --d-shadow-2: 0 3px 14px 2px rgba(0, 0, 0, 5%), 0 8px 10px 1px rgba(0, 0, 0, 6%),
+    0 5px 5px -3px rgba(0, 0, 0, 10%);
+  --d-shadow-3: 0 6px 30px 5px rgba(0, 0, 0, 5%), 0 16px 24px 2px rgba(0, 0, 0, 4%),
+    0 8px 10px -5px rgba(0, 0, 0, 8%);
 
   // 圆角
-  --d-radius-xs: 2px;
-  --d-radius-md: 4px;
-  --d-radius-lg: 8px;
+  --d-radius-small: 3px;
+  --d-radius-medium: 6px;
+  --d-radius-large: 9px;
+  --d-radius-extraLarge: 12px;
 
   // 文字大小
   --d-font-size-xs: 10px;
