--- a/packages/dl-ui/src/cell-group/style.scss
+++ b/packages/dl-ui/src/cell-group/style.scss
@@ -4,7 +4,7 @@
   --d-cell-group-title-gap-bottom: var(--d-gap-xs);
   --d-cell-group-title-gap-padding: var(--d-gap-sm);
   --d-cell-group-gap-bottom: var(--d-gap-sm);
-  --d-cell-group-radius: var(--d-radius-lg);
+  --d-cell-group-radius: var(--d-radius-large);
 }
 
 .#{$prefix}-cell-group {
