--- a/packages/dl-ui/src/popup/style.scss
+++ b/packages/dl-ui/src/popup/style.scss
@@ -5,7 +5,7 @@
   --d-popup-header-gap-bottom: var(--d-gap-sm);
   --d-popup-title-font-size: var(--d-font-size-md);
   --d-popup-padding: var(--d-gap-sm);
-  --d-popup-radius: var(--d-radius-lg);
+  --d-popup-radius: var(--d-radius-large);
 }
 
 .#{$prefix}-popup {
