--- a/packages/dl-ui/src/button/style.scss
+++ b/packages/dl-ui/src/button/style.scss
@@ -1,9 +1,9 @@
 @import '../style/prefix';
 
 :root {
-  --d-button-large-height: 44px;
-  --d-button-medium-height: 40px;
-  --d-button-small-height: 36px;
+  --d-button-large: 48px;
+  --d-button-medium: 40px;
+  --d-button-small: 32px;
   --d-button-disabled-opacity: 0.5;
 }
 
@@ -22,7 +22,7 @@
   // 形状
   &--shape {
     &-default {
-      border-radius: var(--d-radius-md);
+      border-radius: var(--d-radius-medium);
     }
 
     &-rounded {
@@ -142,19 +142,19 @@
   // 尺寸
   &--size {
     &-large {
-      height: var(--d-button-large-height);
+      height: var(--d-button-large);
       padding: 0 var(--d-gap-sm);
       font-size: var(--d-font-size-lg);
     }
 
     &-medium {
-      height: var(--d-button-medium-height);
+      height: var(--d-button-medium);
       padding: 0 var(--d-gap-sm);
       font-size: var(--d-font-size-md);
     }
 
     &-small {
-      height: var(--d-button-small-height);
+      height: var(--d-button-small);
       padding: 0 var(--d-gap-sm);
       font-size: var(--d-font-size-sm);
     }
