docs: 文档样式优化

--- a/docs/src/components/icons-preview/style.scss
+++ b/docs/src/components/icons-preview/style.scss
@@ -20,6 +20,11 @@
       margin-bottom: 16px;
       list-style: none;
       text-align: center;
+      cursor: pointer;
+
+      &:hover {
+        color: var(--d-primary);
+      }
 
       &--title {
         margin-top: 8px;
