--- a/docs/src/components/menu/style.scss
+++ b/docs/src/components/menu/style.scss
@@ -2,9 +2,10 @@
   $prefix: &;
 
   &__wrapper:not(&__sub-menu) {
+    padding-bottom: 30px;
+
     > #{$prefix}__item {
       padding-bottom: var(--d-gap-xs);
-      border-bottom: var(--d-border);
 
       &:not(:first-of-type) {
         margin-top: var(--d-gap-sm);
