--- a/packages/dl-ui/src/radio/style.scss
+++ b/packages/dl-ui/src/radio/style.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   @include disabled;
+  cursor: pointer;
 
   &__label {
     margin-left: var(--d-gap-xxs);
