--- a/packages/dl-ui/src/button/style.scss
+++ b/packages/dl-ui/src/button/style.scss
@@ -25,7 +25,7 @@
       border-radius: var(--d-radius-medium);
     }
 
-    &-rounded {
+    &-round {
       border-radius: 1000px;
     }
 
@@ -197,5 +197,9 @@
         color: var(--d-error);
       }
     }
+  }
+
+  &--dashed {
+    border-style: dashed;
   }
 }
