refactor(Message): 消息组件圆角大小调整

--- a/packages/dl-ui/src/message/style.scss
+++ b/packages/dl-ui/src/message/style.scss
@@ -33,7 +33,7 @@
     align-items: center;
     margin: 10px auto 0;
     padding: var(--d-message-padding);
-    border-radius: var(--d-radius-large);
+    border-radius: var(--d-radius-medium);
     box-shadow: var(--d-message-box-shadow);
     background: var(--d-white-color);
   }
